// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 [typescript] format 1`] = `
"Type argument list cannot be empty. (1:4)
> 1 | foo<>()
    |    ^^
Cause: Type argument list cannot be empty."
`;

exports[`snippet: #1 [typescript] format 1`] = `
"Type argument list cannot be empty. (1:5)
> 1 | (foo<>())
    |     ^^
Cause: Type argument list cannot be empty."
`;

exports[`snippet: #2 [typescript] format 1`] = `
"Type argument list cannot be empty. (1:8)
> 1 | new Foo<>()
    |        ^^
Cause: Type argument list cannot be empty."
`;

exports[`snippet: #3 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:13)
> 1 | function foo<>(){}
    |             ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #4 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:14)
> 1 | (function foo<>(){})
    |              ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #5 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:10)
> 1 | class Foo<> {}
    |          ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #6 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:11)
> 1 | (class Foo<> {})
    |           ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #7 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:23)
> 1 | class Foo {constructor<>()}
    |                       ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #8 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:24)
> 1 | (class Foo {constructor<>()})
    |                        ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #9 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:18)
> 1 | class Foo {method<>()}
    |                  ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #10 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:19)
> 1 | (class Foo {method<>()})
    |                   ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #11 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:22)
> 1 | class Foo {get getter<>()}
    |                      ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #12 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:23)
> 1 | (class Foo {get getter<>()})
    |                       ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #13 [typescript] format 1`] = `
"Type argument list cannot be empty. (1:25)
> 1 | class Foo {property: Bar<> = 1}
    |                         ^^
Cause: Type argument list cannot be empty."
`;

exports[`snippet: #14 [typescript] format 1`] = `
"Type argument list cannot be empty. (1:26)
> 1 | (class Foo {property: Bar<> = 1})
    |                          ^^
Cause: Type argument list cannot be empty."
`;

exports[`snippet: #15 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:14)
> 1 | interface Foo<> {}
    |              ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #16 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:19)
> 1 | interface Foo {bar<>()}
    |                   ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #17 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:16)
> 1 | interface Foo {<>(): boolean}
    |                ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #18 [typescript] format 1`] = `
"Type argument list cannot be empty. (1:15)
> 1 | const foo: Foo<> = 1
    |               ^^
Cause: Type argument list cannot be empty."
`;

exports[`snippet: #19 [typescript] format 1`] = `
"Type parameter list cannot be empty. (1:12)
> 1 | type Foo = <>() => {}
    |            ^^
Cause: Type parameter list cannot be empty."
`;
